# jira-task-forge

./: .gitignore  .vercelignore  AGENTS.md  CONTEXT.md  README.es.md  README.md  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
src/: App.tsx  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: credential-cleanup.nsh
src-tauri/src/: area_catalog.rs  attachment_storage.rs  backup.rs  commands.rs  db.rs  epic_scope.rs  jira_sync.rs  main.rs  models.rs  notion_oauth.rs  project_sync.rs  redaction.rs  repositories.rs  services.rs  sync_audit.rs
src-tauri/src/backup/: applier.rs  attachment_files.rs  audit_policy.rs  export.rs  format.rs  import_plan.rs  snapshot.rs
src-tauri/src/commands/: ai.rs  backup.rs  categories.rs  credentials.rs  description_proposals.rs  external_links.rs  jira.rs  jql.rs  settings.rs  tasks.rs  trays.rs  worker.rs
src-tauri/src/integrations/: ai.rs  jira.rs  jira_mapping.rs  mod.rs  openai.rs
src-tauri/src/jira_sync/: attempt_recorder.rs  planning.rs
src-tauri/src/migrations/: 0001_initial_schema.sql  0003_assisted_description_proposals.sql  0004_task_issue_relationships.sql  0005_catalog_category_source.sql  0006_catalog_delivery_templates.sql  0007_epic_scope.sql  0008_project_sync_decisions.sql  0009_project_sync_scope.sql  0010_category_source_separation.sql
src-tauri/src/services/: ai.rs  backup.rs  categories.rs  credentials.rs  description_proposals.rs  jira.rs  jql.rs  settings.rs  sync_audit.rs  tasks.rs  tests.rs  trays.rs
(+184 files in other folders)
